prevent extra padding if ul is nested in branch-list

--- a/src/blocks/branch-list/index.styl
+++ b/src/blocks/branch-list/index.styl
@@ -51,3 +51,6 @@
 @media(max-width:768px)
   .block-branch-list .btn
     display: block
+
+  .block-branch-list ul ul
+    padding-left: 0
